--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   dotted_decoration: ^1.2.2
   smooth_star_rating: ^1.1.1
   flutter_slidable: ^0.5.7
+  fluttertoast: ^7.1.1
   material_design_icons_flutter: ^4.0.5655
+  http: ^0.12.2
+
   
 
 dev_dependencies:
