--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   fluttertoast: ^7.1.1
   material_design_icons_flutter: ^4.0.5655
   http: ^0.12.2
+  flutter_spinkit: ^4.1.2+1
 
   
 
